gitops/apps/sonarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: sonarr
  ports:
    - name: http
      port: 8989
      targetPort: 8989
      protocol: TCP
