gitops/apps/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: apps
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Sonarr
    gethomepage.dev/icon: sonarr.png
    gethomepage.dev/description: TV manager
    gethomepage.dev/href: "http://sonarr.home.arpa"
spec:
  ingressClassName: traefik
  rules:
    - host: sonarr.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
